--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,9 @@ flutter:
     - family: Poppins
       fonts:
         - asset: fonts/Poppins-Thin.ttf
+    - family: Didac
+      fonts:
+        - asset: fonts/DidactGothic-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
