--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,8 @@
 {
   "projects": {
     "default": "hostingtest-bc313",
-    "y": "sitetesthosting"
+    "y": "sitetesthosting",
+    "hostingWeb": "websitetesthosting",
+    "ss": "test2-7fd9d"
   }
 }
