ready for firebase

--- a/.firebaserc
+++ b/.firebaserc
@@ -3,6 +3,7 @@
     "default": "hostingtest-bc313",
     "y": "sitetesthosting",
     "hostingWeb": "websitetesthosting",
-    "ss": "test2-7fd9d"
+    "ss": "test2-7fd9d",
+    "premierhosting": "premierhosting-9dc41"
   }
 }
