--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,11 @@ dependencies:
     sdk: flutter
   get:
   hover_effect: ^0.6.0
-
+  firebase_core: ^0.5.2+1
+  cloud_firestore: ^0.14.3+1
+  file_picker: ^2.1.0
+  flutter_spinkit: ^4.1.2+1
+  firebase_storage: ^5.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
