--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   file_picker: ^2.1.0
   flutter_spinkit: ^4.1.2+1
   firebase_storage: ^5.1.0
+  firebase: ^7.3.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
