--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   firebase_storage: ^5.1.0
   firebase: ^7.3.2
+  firebase_web: ^5.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
