--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   firebase_storage: ^5.1.0
   firebase: ^7.3.2
   firebase_web: ^5.0.9
+  open_file: ^3.0.3
+  smart_select: ^4.3.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
