--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,9 +34,12 @@ dependencies:
   firebase_web: ^5.0.9
   open_file: ^3.0.3
   smart_select: ^4.3.2
+  provider: ^4.3.2+2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  shared_preferences: ^0.5.12+4
+  firebase_auth: any
 
 dev_dependencies:
   flutter_test:
