--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   shared_preferences: ^0.5.12+4
   firebase_auth: any
+  path: ^1.7.0
+  intl: ^0.16.1
   
 
 dev_dependencies:
