stream message ca commence a menerver

--- a/.firebaserc
+++ b/.firebaserc
@@ -3,7 +3,8 @@
     "default": "hostingtest-bc313",
     "y": "sitetesthosting",
     "hostingWeb": "websitetesthosting",
-    "ss": "test2-7fd9d",
-    "premierhosting": "premierhosting-9dc41"
+    "ss": "hostingaaa",
+    "premierhosting": "premierhosting-9dc41",
+    "hosting": "hosting-f8fee"
   }
 }
