--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,8 @@ dependencies:
     sdk: flutter
   get:
   hover_effect: ^0.6.0
-  firebase_core: ^0.5.2+1
-  cloud_firestore: ^0.14.3+1
+  firebase_core: ^0.5.2
+  cloud_firestore: ^0.14.3
   file_picker: ^2.1.0
   flutter_spinkit: ^4.1.2+1
   firebase_storage: ^5.1.0
