--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   open_file: ^3.0.3
   smart_select: ^4.3.2
   provider: ^4.3.2+2
+  timeago: ^2.0.29
+  rflutter_alert: ^1.1.0
+  awesome_dialog: ^1.2.1
+  giffy_dialog: ^1.8.0
+  url_launcher: ^5.7.10
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
