--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "hosting-f8fee",
+    "default": "hostingaaa",
     "y": "sitetesthosting",
     "hostingWeb": "websitetesthosting",
     "ss": "hostingaaa",
@@ -8,6 +8,7 @@
     "hosting": "hosting-f8fee",
     "fdfd": "hostingaaa",
     "jj": "hosting-f8fee",
-    "jjj": "hosting-f8fee"
+    "jjj": "hosting-f8fee",
+    "gg": "hostingaaa"
   }
 }
