--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,11 +40,13 @@ dependencies:
   awesome_dialog: ^1.2.1
   giffy_dialog: ^1.8.0
   url_launcher: ^5.7.10
+  fluttericon: ^1.0.7
+  shared_preferences: ^0.5.12+4
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  shared_preferences: ^0.5.12+4
+
   firebase_auth: any
   path: ^1.7.0
   intl: ^0.16.1
