--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,8 @@ dependencies:
   awesome_dialog: ^1.2.1
   giffy_dialog: ^1.8.0
   url_launcher: ^5.7.10
-  fluttericon: ^1.0.7
+  lottie:
+  
   shared_preferences: ^0.5.12+4
   
   # The following adds the Cupertino Icons font to your application.
