--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,9 +40,12 @@ dependencies:
   awesome_dialog: ^1.2.1
   giffy_dialog: ^1.8.0
   url_launcher: ^5.7.10
-  lottie:
-  
+  smooth_scroll_web: ^0.0.4
+  animated_text_kit: ^3.0.1
   shared_preferences: ^0.5.12+4
+  flutter_signin_button: ^1.1.0
+  http: ^0.12.2
+  #flutter_facebook_login_web: ^0.2.1+1
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
