--- a/web/manifest.json
+++ b/web/manifest.json
@@ -9,13 +9,9 @@
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
+      
         {
-            "src": "icons/Icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-512.png",
+            "src": "logo.png",
             "sizes": "512x512",
             "type": "image/png"
         }
